# magi-ai-assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTEXT.md  Dockerfile  LICENSE  README.md  docker-compose.app.yaml  docker-compose.yaml  litellm.config.yaml  main.py  main_admin.py  main_admin_docker.py  main_api.py  main_api_docker.py  main_discord.py  main_discord_docker.py  prometheus.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish-magi-web.yml  publish-magi.yml  release.yml
agent/: __init__.py  agents.py  curator.py  factory.py  hooks.py  model.py  summarizer.py  team.py  tools.py
agent/members/: __init__.py  assistant.py  danbooru.py  litellm.py  ollama.py  researcher.py  seanime.py
agent/tools/: __init__.py  danbooru.py  discord.py  http.py  knowledge.py  litellm.py  media.py  memory.py  ollama.py  outputs.py  seanime.py  seanime_mcp.py  storage.py  thinking.py  time.py  vision.py
channels/: api.py  bootstrap.py  discord.py  discord_check.py  openai_api.py
clients/: chunking.py  mydiscord.py
core/: agent_service.py  config.py  conversation.py  db.py  discord_context.py  embeddings.py  media.py  prompts.py
core/knowledge/: __init__.py  chunking.py  store.py
core/memory/: __init__.py  adapters.py  curation.py  kinds.py  manager.py  semantic.py  store.py
core/storage/: __init__.py  s3.py
docs/: README.md  agent-and-tools.md  architecture.md  channels.md  configuration.md  desktop.md  frontend-split.md  getting-started.md  infrastructure.md  memory.md  split-plan.md  web-extensibility-issue-breakdown.md  web-extensibility-plan.md
docs/adr/: 0001-per-kind-memory-modules.md  0002-admin-interface-for-memory-and-knowledge.md  0003-gateway-and-platform-adapters.md
examples/: custom_skill.py  desktop_chat.py
prompts/: README.md  system.md
prompts/channels/: api.md  discord.md
prompts/team/: SOUL.md  assistant.md  danbooru.md  discord.md  lead.md  litellm.md  ollama.md  seanime.md  seanime_mcp.md
scripts/: ingest_knowledge.py  run-openwebui.ps1
src/magi/: AGENTS.md  __init__.py  app.py
src/magi/agent/: AGENTS.md  __init__.py  agents.py  curator.py  introspect.py  model.py  mood.py  skills.py  summarizer.py  team.py  title.py
src/magi/agent/members/: __init__.py  assistant.py  researcher.py
src/magi/agent/tools/: __init__.py  danbooru.py  danbooru_local.py  discord.py  evolution.py  http.py  identity.py  knowledge.py  litellm.py  mcp.py  media.py  memory.py  ollama.py  recipes.py  reminders.py  seanime.py  seanime_mcp.py  storage.py  thinking.py  time.py  vision.py  websearch.py
src/magi/channels/: AGENTS.md  admin.py  api.py  bootstrap.py  discord.py  discord_check.py  gateway.py
src/magi/client/: __init__.py  base.py  embedded.py  http.py  sync.py  types.py
src/magi/core/: AGENTS.md  config.py  context.py  conversation.py  db.py  discord_context.py  embeddings.py  evolution.py  identity.py  media.py  prompts.py  settings.py  tokens.py  voice.py
src/magi/core/items/: __init__.py  archive.py
src/magi/core/knowledge/: __init__.py  store.py  subjects.py
src/magi/core/memory/: __init__.py  adapters.py  admin.py  curation.py  git_backend.py  kinds.py  manager.py  semantic.py  store.py
src/magi/core/storage/: __init__.py  local.py  s3.py
src/magi/desktop/: __init__.py  app.py  backend.py  bridge.py  server.py  window.py
src/magi/prompts/: curation.md  greet.md  mood.md
src/magi/prompts/team/: mcp_member.md  researcher.md
tests/: AGENTS.md  conftest.py  test_admin.py  test_api.py  test_chunking.py  test_client.py  test_conversation.py  test_curator.py  test_danbooru_local.py  test_danbooru_tools.py  test_discord_client.py  test_discord_tools.py  test_embeddings.py  test_evolution.py  test_gateway.py  test_hooks.py  test_http_tools.py  test_identity.py  test_identity_tools.py  test_introspection.py  test_item_archive.py  test_knowledge.py  test_knowledge_tools.py  test_local_store.py  test_mcp_and_tools.py  test_media_tools.py  test_memory.py  test_memory_adapters.py  test_memory_admin.py  test_memory_depth.py  test_memory_git.py  test_memory_kinds.py  test_model.py  test_mood.py  test_outputs.py  test_prompt_contracts.py  test_seanime_mcp_tools.py  test_seanime_tools.py  test_session_archive.py  test_settings.py  (+7 more)
web/: .env.example  .gitignore  .npmrc  AGENTS.md  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json  postcss.config.mjs
web/scripts/: gen-api.mjs
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/(app)/: error.tsx  layout.tsx  loading.tsx  page.tsx
web/src/app/(app)/chat/: page.tsx
web/src/app/(app)/companion/: page.tsx
web/src/app/(app)/identity/: page.tsx
web/src/app/(app)/knowledge/: page.tsx
web/src/app/(app)/memory/: page.tsx
web/src/app/(app)/persona/: page.tsx
web/src/app/(app)/settings/: page.tsx
web/src/app/(app)/subjects/: page.tsx
web/src/app/(app)/team/: page.tsx
web/src/app/api/chat/: route.ts
web/src/app/api/identity/: route.ts
web/src/app/api/memory/: route.ts
web/src/app/knowledge/: page.tsx
web/src/app/knowledge/[...docId]/: page.tsx
web/src/app/knowledge/add/: page.tsx
web/src/app/login/: page.tsx
web/src/app/memory/: page.tsx
web/src/app/memory/[user]/: page.tsx
web/src/app/persona/: page.tsx
web/src/app/subjects/: page.tsx
web/src/components/: AddKnowledge.tsx  AppShell.tsx  ChatConsole.tsx  CodeBlock.tsx  CopyId.tsx  DocumentActions.tsx  DocumentMeta.tsx  FactEditor.tsx  IdentityEditor.tsx  KnowledgeList.tsx  MemoryTabs.tsx  MermaidDiagram.tsx  Nav.tsx  RawFileEditor.tsx  SessionFile.tsx  SessionMemoryActions.tsx  Sidebar.tsx  StatCard.tsx  SubjectManager.tsx  TeamView.tsx  UserGrid.tsx
web/src/components/assistant-ui/: context-display.tsx
web/src/components/ui/: tooltip.tsx
web/src/lib/: admin-api.ts  api-types.ts  blob-store.ts  chat-adapter.ts  chat-api.ts  chat-attachments.ts  chat-dictation.ts  chat-history.ts  chat-media-offload.ts  chat-sessions.ts  encode.ts  introspection-types.ts  utils.ts
(+27 files in other folders)
