[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
# Engine packages a persona (private repo, e.g. alyssa) installs and extends.
# The persona references this distribution by name; during local dev it points a
# `[tool.uv.sources]` editable path source at this working tree so engine edits
# are live with no reinstall (see docs/split-plan.md).
dependencies = [
    "agno>=2.6.11",
    "anthropic>=0.105.2",
    "ddgs>=9.14.4",
    "discord.py>=2.4.0",
    "docker>=7.1.0",
    "fastapi>=0.136.3",
    "litellm>=1.87.0",
    "ollama>=0.6.2",
    "openai>=2.40.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.48.0",
]

[project.optional-dependencies]
# Semantic memory search (SEMANTIC_MEMORY=1). Optional: core.memory.semantic
# lazy-imports qdrant_client and no-ops when it's absent, so the base install
# stays lean. Enable with: uv sync --extra semantic
semantic = [
    "qdrant-client>=1.12.0",
]
# Seanime-over-MCP (seanime_use_mcp=True). Optional: agent.tools.seanime_mcp
# lazy-imports agno's MCPTools (which needs `mcp`) and only the MCP-backed anime
# specialist touches it, so the base install stays lean. Enable with:
# uv sync --extra mcp
mcp = [
    "mcp>=1.9.0",
]
# Object storage (s3_enabled=True). Optional: core.storage.s3 lazy-imports boto3
# and the factory no-ops when it's absent, so the base install stays lean. Backs
# the model's durable file/image archive (agent.tools.storage) against any
# S3-compatible server — RustFS/MinIO locally, or AWS S3. Enable with:
# uv sync --extra s3
s3 = [
    "boto3>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The engine is a set of flat top-level packages (no src/ layout). List them
# explicitly so a `pip install`/editable build of the persona repo picks up the
# whole engine. `prompts/` is intentionally not packaged: an editable path source
# resolves PROMPTS_DIR from __file__ to this tree's prompts/, and a persona ships
# its own prompts via the overlay (see core/prompts.py). For a non-editable wheel,
# add prompts/ as wheel data here.
[tool.hatch.build.targets.wheel]
packages = ["core", "agent", "channels"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
