[project]
name = "magi"
version = "0.1.0"
description = "magi — an assistant-core engine: a lead routing to a specialist team, with memory, knowledge, and tools."
readme = "README.md"
requires-python = ">=3.14"
# Engine packages a persona (private repo, e.g. alyssa) installs and extends.
# The persona references this distribution by name; during local dev it points a
# `[tool.uv.sources]` editable path source at this working tree so engine edits
# are live with no reinstall (see docs/split-plan.md).
dependencies = [
    "agno>=2.6.11",
    "anthropic>=0.105.2",
    "ddgs>=9.14.4",
    "discord.py>=2.4.0",
    "docker>=7.1.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.0",
    "litellm>=1.87.0",
    "ollama>=0.6.2",
    "openai>=2.40.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.48.0",
]

[project.optional-dependencies]
# Semantic memory search (SEMANTIC_MEMORY=1). Optional: magi.core.memory.semantic
# lazy-imports qdrant_client and no-ops when it's absent, so the base install
# stays lean. Enable with: uv sync --extra semantic
semantic = [
    "qdrant-client>=1.12.0",
]
# Seanime-over-MCP (seanime_use_mcp=True). Optional: magi.agent.tools.seanime_mcp
# lazy-imports agno's MCPTools (which needs `mcp`) and only the MCP-backed anime
# specialist touches it, so the base install stays lean. Enable with:
# uv sync --extra mcp
mcp = [
    "mcp>=1.9.0",
]
# Object storage (s3_enabled=True). Optional: magi.core.storage.s3 lazy-imports boto3
# and the factory no-ops when it's absent, so the base install stays lean. Backs
# the model's durable file/image archive (magi.agent.tools.storage) against any
# S3-compatible server — RustFS/MinIO locally, or AWS S3. Enable with:
# uv sync --extra s3
s3 = [
    "boto3>=1.35.0",
]
# Desktop shell (`python main.py desktop`). Optional: magi.desktop is imported only
# when that channel runs (main.py lazy-imports it), so the base install and the
# other channels stay Qt-free. Provides PySide6 + QtWebEngine to render the web
# frontend in a frameless native window. Enable with: uv sync --extra desktop
desktop = [
    "PySide6>=6.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Single src-layout package `magi` (core/agent/channels live under it). Its
# bundled `prompts/` ride along as package data — they sit inside the package
# (magi/prompts), so an editable or wheel install resolves BUNDLED_PROMPTS_DIR
# from __file__ either way; a persona ships its own prompts via the overlay
# (see magi/core/prompts.py).
[tool.hatch.build.targets.wheel]
packages = ["src/magi"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
