# Distribution name is `magi-ai-assistant` (the plain `magi` is taken on PyPI by
# an unrelated project). The *import* package is still `magi` — see
# [tool.hatch.build.targets.wheel] below — so overlays keep doing `import magi`.
[project]
name = "magi-ai-assistant"
version = "0.2.0"
description = "magi — an assistant-core engine: a lead routing to a specialist team, with memory, knowledge, and tools."
readme = "README.md"
requires-python = ">=3.14"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [
    { name = "Cláudio Carneiro", email = "claudiofcarneiro@gmail.com" },
]
maintainers = [
    { name = "Cláudio Carneiro", email = "claudiofcarneiro@gmail.com" },
]
keywords = [
    "ai",
    "assistant",
    "agent",
    "agno",
    "llm",
    "chatbot",
    "discord",
    "memory",
    "rag",
    "multi-agent",
]
# NB: no "License ::" classifier — the SPDX `license` expression above is the
# single source of truth (PEP 639); listing both is rejected by modern tooling.
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Framework :: FastAPI",
    "Topic :: Communications :: Chat",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
# Engine packages a persona (private repo, e.g. alyssa) installs and extends.
# The persona references this distribution by name; during local dev it points a
# `[tool.uv.sources]` editable path source at this working tree so engine edits
# are live with no reinstall (see docs/split-plan.md).
dependencies = [
    "agno>=2.6.11",
    "anthropic>=0.105.2",
    "ddgs>=9.14.4",
    "discord.py>=2.4.0",
    "docker>=7.1.0",
    "fastapi>=0.136.3",
    "httpx>=0.28.0",
    "litellm>=1.87.0",
    "ollama>=0.6.2",
    "openai>=2.40.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.48.0",
]

[project.urls]
Homepage = "https://github.com/carneirofc/magi-ai-assistant"
Repository = "https://github.com/carneirofc/magi-ai-assistant"
Documentation = "https://github.com/carneirofc/magi-ai-assistant/tree/master/docs"
Changelog = "https://github.com/carneirofc/magi-ai-assistant/blob/master/CHANGELOG.md"
Issues = "https://github.com/carneirofc/magi-ai-assistant/issues"

[project.optional-dependencies]
# Semantic memory search (SEMANTIC_MEMORY=1). Optional: magi.core.memory.semantic
# lazy-imports qdrant_client and no-ops when it's absent, so the base install
# stays lean. Enable with: uv sync --extra semantic
semantic = [
    "qdrant-client>=1.12.0",
]
# Seanime-over-MCP (seanime_use_mcp=True). Optional: magi.agent.tools.seanime_mcp
# lazy-imports agno's MCPTools (which needs `mcp`) and only the MCP-backed anime
# specialist touches it, so the base install stays lean. Enable with:
# uv sync --extra mcp
mcp = [
    "mcp>=1.9.0",
]
# Object storage (s3_enabled=True). Optional: magi.core.storage.s3 lazy-imports boto3
# and the factory no-ops when it's absent, so the base install stays lean. Backs
# the model's durable file/image archive (magi.agent.tools.storage) against any
# S3-compatible server — RustFS/MinIO locally, or AWS S3. Enable with:
# uv sync --extra s3
s3 = [
    "boto3>=1.35.0",
]
# Git-backed memory (memory_git_enabled=True). Optional: magi.core.memory.git_backend
# lazy-imports GitPython and the factory no-ops when it's absent, so the base
# install stays lean. Makes the memory root (memory_dir) a git repository the
# backend initializes and manages, committing every deliberate memory write so the
# whole tree has a full, inspectable, revertible history. Enable with:
# uv sync --extra git
git = [
    "GitPython>=3.1.40",
]
# Desktop shell (`python main.py desktop`). Optional: magi.desktop is imported only
# when that channel runs (main.py lazy-imports it), so the base install and the
# other channels stay Qt-free. Provides PySide6 + QtWebEngine to render the web
# frontend in a frameless native window. Enable with: uv sync --extra desktop
desktop = [
    "PySide6>=6.8.0",
]
# Web search tool (websearch_enabled=True). Optional: magi.agent.tools.websearch
# lazy-imports ddgs and the builder no-ops when it's absent, so the base install
# stays offline-by-default. Enable with: uv sync --extra websearch
websearch = [
    "ddgs>=9.0.0",
]
# Document text extraction (the read_document storage tool's PDF path). Text-like
# files need nothing; PDFs lazy-import pypdf and the tool reports the missing
# extra honestly. Enable with: uv sync --extra docs
docs = [
    "pypdf>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Single src-layout package `magi` (core/agent/channels live under it). Its
# bundled `prompts/` ride along as package data — they sit inside the package
# (magi/prompts), so an editable or wheel install resolves BUNDLED_PROMPTS_DIR
# from __file__ either way; a persona ships its own prompts via the overlay
# (see magi/core/prompts.py).
[tool.hatch.build.targets.wheel]
packages = ["src/magi"]

# Keep the sdist to Python sources + project docs. Without an explicit include,
# hatchling sweeps the whole tree into the sdist — including the built Next.js
# frontend under web/.next/ and its node_modules (hundreds of MB). The frontend
# ships separately as the @carneirofc/magi-web npm package, so it has no business
# in the engine's sdist. Leading slashes anchor to the project root — hatchling
# uses .gitignore matching, so an unanchored "LICENSE" would also pull in every
# node_modules/**/LICENSE.
[tool.hatch.build.targets.sdist]
include = [
    "/src/magi",
    "/README.md",
    "/LICENSE",
    "/CHANGELOG.md",
    "/pyproject.toml",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"

[tool.ruff]
target-version = "py314"
line-length = 100

# Default rule set (pyflakes F + essential pycodestyle E). Kept conservative so
# the lint gate is meaningful without demanding a repo-wide reformat — `ruff
# format` is intentionally not enforced in CI yet. Tighten (e.g. add "I", "UP")
# in a follow-up once the tree is clean under them.
